syntax = "proto3";

package proto;
option go_package = "./proto";

import "diligent_common.proto";

service Boss {
  // Ping
  rpc Ping (BossPingRequest) returns (BossPingResponse);

  // Minions Management
  rpc RegisterMinion (BossRegisterMinionRequest) returns (BossRegisterMinionResponse);
  rpc UnregisterMinion (BossUnregisterMinonRequest) returns (BossUnregisterMinionResponse);
  rpc ShowMinions (BossShowMinionRequest) returns (BossShowMinionResponse);

  // Workload Related
  rpc RunWorkload (BossRunWorkloadRequest) returns (BossRunWorkloadResponse);
  rpc StopWorkload (BossStopWorkloadRequest) returns (BossStopWorkloadResponse);
}

message BossPingRequest {
}

message BossPingResponse {
}

message BossRegisterMinionRequest{
  string url = 1;
}

message BossRegisterMinionResponse {
  GeneralStatus status = 1;
}

message BossUnregisterMinonRequest {
  string url = 1;
}

message BossUnregisterMinionResponse {
  GeneralStatus status = 1;
}

message BossShowMinionRequest {
}

message BossShowMinionResponse {
  repeated MinionStatus minion_statuses = 1;
}

message MinionStatus {
  string url = 1;
  GeneralStatus status = 2;
}

message BossRunWorkloadRequest {
  DataSpec data_spec = 1;
  DBSpec db_spec = 2;
  WorkloadSpec wl_spec = 3;
}

message BossRunWorkloadResponse {
  GeneralStatus overall_status = 1;
  repeated MinionStatus minion_statuses = 2;
}

message BossStopWorkloadRequest {
}

message BossStopWorkloadResponse {
  GeneralStatus overall_status = 1;
  repeated MinionStatus minion_statuses = 2;
}
