syntax = "proto3";

package proto;
option go_package = "./proto";

import "diligent_common.proto";

service Minion {
  // Ping
  rpc Ping (MinionPingRequest) returns (MinionPingResponse);

  // Job Control
  rpc PrepareJob (MinionPrepareJobRequest) returns (MinionPrepareJobResponse);
  rpc RunJob (MinionRunJobRequest) returns (MinionRunJobResponse);
  rpc StopJob (MinionStopJobRequest) returns (MinionStopJobResponse);
}

message MinionPingRequest {
}

message MinionPingResponse {
  BuildInfo build_info = 1;
  ProcessInfo process_info = 2;
  JobInfo job_info = 3;
}

message MinionPrepareJobRequest {
  string job_id = 1;
  string job_desc = 2;
  JobSpec job_spec = 3;
}

message MinionPrepareJobResponse {
  GeneralStatus status = 1;
}

message MinionRunJobRequest {
}

message MinionRunJobResponse {
  GeneralStatus status = 1;
}

message MinionStopJobRequest {
}

message MinionStopJobResponse {
  GeneralStatus status = 1;
}

